# sensor-vlm

./: .gitignore  README.md  help.md  pyproject.toml  requirements.txt
data/: sample_manifest.csv
doc/: 1500-balanced-results.md  1500-results.md  ambi3d-image-prep.md  ambi3d-view-baselines-results.md  ambiguity-experiments-comparison-2026.md  clean-balanced-1500-results.md  dialfred-clean-relaxed-target3000-results.md  dialfred-clean-strict-target3000-results.md  dialfred-weighted-target3000-results.md  early_results.md  generate_result_graphs.ipynb  late_results.md  process.md
notebooks/: 01_dialfred_baseline.ipynb  02_blip2_image_features.ipynb  03_multimodal_mlp.ipynb
scripts/: check_alfred_download.ps1
src/sensor_vlm/: __init__.py  alfred_linker.py  blip2_features.py  build_features.py  data.py  download_alfred.py  extract_alfred_subset.py  features.py  infer.py  model.py  paths.py  prepare_ambi3d_manifest.py  prepare_clean_manifest.py  train.py
src/sensor_vlm.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/sensor_vlm/alternative-approach/: extract_1500_samples.py  extract_all_imbalanced.py  extract_from_extracted_dir.py  run_feature_building_1326.py  run_feature_building_4574.py
