[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sensor-vlm"
version = "0.1.0"
description = "Multimodal ambiguity detection from image and instruction inputs."
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["src"]

